FIX: avoid multiple counts of conversation on mobile

--- a/mobile/mobile.scss
+++ b/mobile/mobile.scss
@@ -62,4 +62,8 @@
     content: " conversations";
     font-size: 14px;
   }
+
+  .category-stat:nth-of-type(2) {
+    display: none;
+  }
 }
